# adviser

./: .aicoe-ci.yaml  .coafile  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prow.yaml  .thoth.yaml  .thothTemplate.yaml  .travis.yml  .zuul.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  OWNERS  OWNERS_ALIASES  Pipfile  README.rst  app.py  app.sh  build.sh  cache_config.yaml  liveness.py  mypy.ini  prepare.py  pyproject.toml  requirements.txt  setup.py  thoth-adviser
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  kebechet_info.md  kebechet_update.md  major-release.md  minor-release.md  patch-release.md  redeliver_container_image.md
docs/: dependency_monkey.md  libdependency_graph.md
docs/source/: anneal.rst  annealing.rst  architecture.rst  boots.rst  compatibility.rst  conf.py  dependency_graph.rst  dependency_monkey.rst  (+24 more)
openshift/: adviser-template.yaml  buildConfig-cached-template.yaml  buildConfig-template.yaml  dependency-monkey-template.yaml  imageStream-cached-template.yaml  imageStream-template.yaml  job-adviser-template.yaml  job-dependencyMonkey-template.yaml  job-dependencyMonkey.yaml  job-provenanceChecker-template.yaml  job-template.yaml  pod-dependencyMonkey.yaml  pod-provenanceChecker-template.yaml  pod-template.yaml  workflow-adviser-template.yaml
tests/: __init__.py  _test_digests_fetcher.py  base.py  conftest.py  graph_mock.py  helpers.py  test_beam.py  test_configuration.py  test_context.py  test_cpu_db.py  test_dependency_monkey.py  test_dm_report.py  test_enums.py  test_exceptions.py  test_pipeline_builder.py  test_pipeline_config.py  test_predictor.py  test_product.py  test_report.py  test_resolver.py  test_rules.py  test_solver.py  test_state.py  test_step.py  test_thoth_search.py  test_unit.py
(+542 files in other folders)
